--- a/html1/index.html
+++ b/html1/index.html
@@ -9,5 +9,26 @@
     <h1>Welcome to the Web Development Sessions 🔥 </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nemo quidem numquam aperiam consequuntur? Quibusdam distinctio tempora eos nemo, quisquam tenetur, harum modi assumenda, eius itaque nesciunt dicta exercitationem molestiae voluptate excepturi doloremque? Nihil explicabo ipsum rerum laborum, sed, tempora autem quam illo, culpa magni vel optio possimus quas iure totam cupiditate reiciendis ducimus necessitatibus! Maiores, dicta suscipit. Eveniet nostrum tenetur maiores quisquam quibusdam doloremque dicta consequatur officia earum soluta nulla, animi ad incidunt! Suscipit libero incidunt quidem illo, ipsam magni laudantium cupiditate eveniet, dolorem voluptatem minus ex fuga natus impedit possimus, unde neque dolor nisi ut laborum error. Voluptatum?</p>
     <img src="https://plus.unsplash.com/premium_photo-1697729701846-e34563b06d47?q=80&w=3948&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="" height="300" width="300">
+
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>React</li>
+        <li>Node.js</li>
+        <li>Express</li>
+    </ul>
+
+
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>React</li>
+        <li>Node.js</li>
+        <li>Express</li>
+    </ol>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, hic tempora eligendi in minima earum voluptas. Excepturi atque iste saepe repellendus odit. Voluptate, reiciendis. Sequi, voluptates recusandae! Quam dicta mollitia consequuntur tenetur quaerat dolore non itaque alias debitis quia repudiandae voluptate dolorum eaque deserunt iste, molestiae, adipisci quidem exercitationem reiciendis necessitatibus illum? Ratione fugit nihil consectetur nulla tempore? Soluta molestiae, ab, consequuntur velit repellendus quibusdam sed nobis neque aspernatur sint dolores dicta adipisci quas, veritatis corporis. Optio perferendis saepe temporibus numquam repudiandae, soluta exercitationem sunt suscipit dolores quos dolor rerum! Nemo illo facere quos dolorum minus accusamus. Quae delectus ipsam quis quia, distinctio accusamus nemo laudantium impedit dignissimos ex eum, a provident sapiente blanditiis vero possimus reiciendis cumque, magnam architecto culpa praesentium nesciunt? Fuga ipsam in est rerum porro ea velit itaque ab quidem sunt? Fuga impedit beatae libero dicta iste facere illum dolores, dolor architecto asperiores quis nulla est et corporis sunt accusantium id aliquam explicabo officia nobis, harum excepturi? Eaque beatae asperiores distinctio soluta amet nostrum quo ipsam repellat voluptatum molestias recusandae, cumque nisi veritatis. Iste quo delectus non reiciendis dolores nam, quod voluptates et. Voluptate maxime, similique esse, quis iusto incidunt temporibus reprehenderit ducimus veniam nihil quam, cumque quae! Error, obcaecati eaque. Dolorum unde quisquam accusantium ducimus ipsam libero laborum! Debitis perspiciatis doloremque, iure esse architecto mollitia atque voluptas assumenda nulla asperiores earum, beatae soluta? Quidem vero, repellat sint nisi veniam atque nesciunt eum aspernatur, et voluptatum doloribus perferendis expedita voluptatem modi cumque totam eveniet sapiente quaerat iure! Totam, at praesentium libero officia vitae error voluptas nostrum iste, illo, in ab fugiat distinctio facilis asperiores delectus voluptatibus atque nesciunt unde animi nihil. Nesciunt voluptatibus tempore, numquam delectus, aperiam odio distinctio pariatur nisi ipsam autem rem enim ea necessitatibus, excepturi dolores quibusdam nemo quos fuga perferendis modi libero. Voluptate, nam. Expedita temporibus saepe dolorum ut ducimus aspernatur, suscipit vel, minus explicabo tempore laudantium dignissimos molestiae doloribus? Tenetur molestiae ad nam corporis vel magni, architecto in cumque, porro placeat omnis veritatis dolorem ut excepturi maiores eius alias, illo modi quos atque perferendis officiis aspernatur! Dolorum, consequuntur voluptates. Laudantium ea modi, eum ab adipisci laborum corporis magnam, accusantium ut autem iste, dolorum voluptate fugit. Ipsum accusantium distinctio, quis molestias deleniti reiciendis nobis voluptatibus expedita, dolor exercitationem at suscipit delectus fugiat, earum quaerat repudiandae. Aliquid repellat perspiciatis, minima similique nobis porro quisquam aut vero iure consequuntur facilis quo dignissimos ipsam hic libero. Blanditiis voluptatibus, soluta dolore obcaecati impedit perspiciatis in. Cum amet eveniet sint quas asperiores consequatur distinctio. Magnam explicabo dolore fugit eos delectus dicta quis libero exercitationem, molestiae accusamus mollitia numquam nihil aperiam eveniet ullam? Cumque earum dolorem sint, rem illo a quasi perspiciatis officiis neque ut assumenda error temporibus placeat nobis pariatur vel! Obcaecati quo nesciunt ipsum dignissimos laborum officiis doloremque sunt repudiandae alias blanditiis numquam illo, tempore provident laudantium labore sapiente velit necessitatibus unde veniam tempora. Alias fugit ea placeat doloribus tenetur non laborum recusandae ipsum hic ut ratione eaque magnam, necessitatibus accusamus nobis possimus quos perferendis praesentium?</p>
 </body>
 </html>
